# shadow-bot

./: .gitignore  README.md  ci.yml  install_termux.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
shadowbot/: __init__.py  cli.py  config.py
shadowbot/agent/: __init__.py  loop.py
shadowbot/memory/: __init__.py
shadowbot/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
shadowbot/rag/: __init__.py
shadowbot/tools/: __init__.py
