[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowbot"
version = "1.0.0"
description = "Unified AI Agent — nanobot + NOMAD + OpenClaude, Termux-ready"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.97.0",
    "openai>=2.33.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "prompt_toolkit>=3.0.52",
    "pydantic>=2.13.3",
    "click>=8.3.3",
    "aiohttp>=3.13.5",
    "aiofiles>=25.1.0",
    "rank_bm25>=0.2.2",
    "sqlite-utils>=3.39",
]

# Optional deps — tidak wajib untuk Termux
[project.optional-dependencies]
search = ["ddgs>=9.14.1"]
full = ["ddgs>=9.14.1"]

[project.scripts]
shadowbot = "shadowbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["shadowbot*"]
